# rk3288_opencv

./: .clangd  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_RESULT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_WIKI.md  CREDITS.md  DEVELOP.md  GITHUB_SCAN_AUDIT.md  GOVERNANCE_EXECUTION_AUDIT.md  GOVERNANCE_VERIFICATION.md  LICENSE  Model_Inventory.md  README.md  README_BUILD.md  REMOTE_BRANCH_AUDIT.md  TEST_REPORT.md  build_android.bat  commit_message.txt  docs_sync_audit_2026-05-01T17-48-26-3079b3c4.json  docs_sync_audit_2026-05-01T17-48-26-3079b3c4.md  fix_ci.patch  fix_ci.py  fix_ci_actions.patch  fix_cmake_gen.patch  fix_stub.patch  gradle.properties  loop-budget.md  loop-constraints.md  original_civetweb.c  patch.diff  patch_c.diff  patch_cpp.diff  patch_keygen.diff  patch_keygen2.diff  (+7 more)
.Jules/: bolt.md  palette.md  sentinel.md
.claude/audit/: android_layer_review.md  p1.1-architecture-scan.md  p1.2-git-analysis.md  p1.3-security-scan.md  p1.4-metrics.md  p2.1-cpp-engine.md  p2.2-windows-service.md  p2.3-android-layer.md  p2.4-web-spa.md  p2.5-build-ci.md  p2.6-test-coverage.md  p2.7-docs-compliance.md  p3.1-cross-module-contracts.md  p3.2-global-patterns.md  s1-summary.md  s2-summary.md
.github/workflows/: ci.yml  ci.yml.orig  docs-audit.yml
.jules/: bolt.md  palette.md  sentinel.md
.trae/rules/: app-development.md
.trae/specs/audit-camera-pipeline/: checklist.md  spec.md  tasks.md
.trae/specs/clean-repo-junk/: checklist.md  spec.md  tasks.md
.trae/specs/document-camera-face-research/: checklist.md  spec.md  tasks.md
.trae/specs/improve-face-detection-eval/: checklist.md  spec.md  tasks.md
.trae/specs/improve-win-display-adaptation/: checklist.md  spec.md  tasks.md
.trae/specs/opencv-4-10-0-verification/: checklist.md  spec.md  tasks.md
.trae/specs/refactor-win-preview-system/: checklist.md  spec.md  tasks.md
.trae/specs/rk3288-adaptation/: checklist.md  spec.md  tasks.md
.trae/specs/rk3288-optimization-implementation/: checklist.md  spec.md  tasks.md
.trae/specs/select-rk3288-inference-face-stack/: checklist.md  spec.md  tasks.md
.trae/specs/system-audit-and-optimization/: checklist.md  spec.md  tasks.md
.trae/specs/windows-camera-face-recognition/: checklist.md  spec.md  tasks.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
cmake/: android.cmake  core.cmake  face_infer.cmake  opencv.cmake  windows.cmake
config/: windows_camera_face_recognition.ini
docs/: ARM 平台加速方案与 OpenCV.md  CREDITS.md  DEVELOP.md  RK3288_CONSTRAINTS.md  acceleration_study.md  index.md  refactor-insights-audit-2026-05-16.md  safety.md  芯片调度优化与架构分析报告.md
docs/analysis/: evidence_20170115_analysis.md  stability_governance_execution_report_2026-05-19.md  stability_governance_remediation_plan_2026-05-19.md
docs/architecture/: ARCHITECTURE.md  android-layer.md  cpp-engine.md
docs/audit/: camera_pipeline_audit_report.md  camera_pipeline_regression_test_plan.md
docs/bsp/: BSP_RELEASE_NOTES.md
docs/bsp/defconfig/: rk3288_defconfig
docs/bsp/kernel-config/: README.md  kernel.config  rk3288_kernel.config
docs/checklist/: acceptance.md
docs/compose/plans/: 2026-06-21-int8-quantization.md
docs/compose/specs/: 2026-06-21-int8-quantization-design.md
docs/designs/: int8-quantization-design.md  int8-quantization-plan.md  personnel-enrollment-design.md
docs/documents/: 重构洞察-MainActivity监控编排耦合问题.md  重构洞察-runFaceInferOnce巨型函数与JSON混用问题.md
docs/feasibility/: acceleration_feasibility_report.md
docs/perf/: stutter-investigation-report.md
docs/research/: appendix-b.md  appendix-c.md  appendix-d.md  appendix-e.md  appendix-f.md  appendix-g.md  appendix-h.md  camera_system.md  face_recognition.md  perf_optimization.md
docs/runbooks/: rk3288-android-uvc-camera2-camerax-acceptance.md
docs/security/: civetweb-ssl-note.md
docs/superpowers/plans/: 2026-05-16-monitoring-coordinator.md  2026-05-16-task1-main-screen-binder.md  2026-05-17-fix-stutter-inference-throttle-task1.md  2026-05-17-fix-stutter-inference-throttle-task2.md  (+7 more)
docs/windows-camera-face-recognition/: DISPLAY_METRICS.md  PERF_TEST_REPORT.md  PERF_TEST_REPORT_BASELINE.md  USER_MANUAL.md
docs/windows-web-spa/: architecture.md  config.md  config.schema.json  deploy_and_rollback.md  feature_parity.md  openapi.yaml  performance.md  uat.md
patterns/: registry.yaml
screenshot-analyzer/: build.gradle
scripts/: bench_camera_adb.ps1  bench_camera_adb.sh  build_android.bat  check-raii-violations.sh  clean-repo-junk.js  clean-repo-junk.rules.json  docs-sync-audit.js  download_calib_images.py  face_param_list_test_set01.csv  quantize_ncnn_int8.py  run-web-e2e.ps1  stability_switch_50_adb.ps1  verify_faces_test_set01.bat  verify_opencv_host.bat
src/cpp/: main.cpp  native-lib-stub.cpp  native-lib.cpp  opencv_verify_cli.cpp
tests/cpp/: core_unit_tests_main.cpp  face_infer_unit_tests_main.cpp  mpp_decoder_stub.cpp  ncnn_precision_test.cpp  test_acceleration_contract.cpp  test_adapters.cpp  test_bioauth.cpp  test_connection_quota.cpp  test_engine.cpp  test_event_manager.cpp  test_face_align.cpp  test_face_infer_outcome_json.cpp  test_face_infer_pipeline.cpp  test_face_search.cpp  test_file_hash.cpp  test_frame_input_channel.cpp  test_gallery_cache.cpp  test_int8_quantization.cpp  test_mock_preflight_guards.cpp  test_motion.cpp  test_native_log.cpp  test_resource_cleanup.cpp  test_result_publisher.cpp  test_threshold_policy.cpp  test_track_coordinator.cpp  test_video_manager.cpp
tests/data/: manifest.csv
tests/metrics/: VERIFICATION.md
tests/scripts/: docs-sync-audit.test.js
tests/test_set01/: manifest.csv
tests/win/: test_endpoint_registry.cpp  test_face_database_perf.cpp  test_face_metrics.cpp  test_http_faces_server.cpp  test_json_lite.cpp  test_lbph_embedder.cpp  test_runtime_bootstrap.cpp  win_unit_tests_main.cpp
web/: .gitignore  .nycrc.json  README.md  cypress.config.ts  index.html  package.json  pnpm-lock.yaml  verify_home_empty_state.py  verify_playwright.py  verify_preview_a11y.py  vite.config.ts
web/src/: App.tsx
(+382 files in other folders)
